# pico-wireless-gamepad

./: CMakeLists.txt  README.md  main.c  nrf_receiver.c  nrf_receiver.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
receiver/: CMakeLists.txt  nrf24_spi.c
